# otus_homework_05_editor

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  class_circle-members.html  class_circle.html  class_circle__coll__graph.md5  class_circle__inherit__graph.map  class_controller-members.html  class_controller.html  class_document-members.html  class_document.html  class_i_primitive-members.html  class_i_primitive.html  class_i_primitive__inherit__graph.map  class_i_primitive__inherit__graph.md5  class_memento-members.html  class_memento.html  class_model-members.html  class_model.html  class_model__inherit__graph.map  class_model__inherit__graph.md5  class_publisher-members.html  class_publisher.html  class_publisher__inherit__graph.map  class_publisher__inherit__graph.md5  class_rectangle-members.html  class_rectangle.html  class_rectangle__coll__graph.md5  class_rectangle__inherit__graph.map  class_subscriber-members.html  class_subscriber.html  class_subscriber__inherit__graph.map  class_subscriber__inherit__graph.md5  class_view-members.html  class_view.html  class_view__coll__graph.map  class_view__coll__graph.md5  classes.html  (+25 more)
.github/workflows/: release.yml
search/: all_4.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  pages_0.js  searchdata.js  variables_0.js
